--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -62,18 +62,20 @@ h2 	{
 #selfie {
   	border: 3px solid #ddd;
   	border-radius: 8px;
-  	padding: 10px;
-	margin: 20px;
+  	margin-top: 10px;
+	margin-right: 20px;
 	float: left;
+	border: 10px solid transparent;
+ 
+  border-image: url(border.png) 30 stretch;
 	}
 
 .content {
 	min-height: 100vh;
-  	background-color: rgba(255, 255, 255, 0.8);
+  	background-color: rgba(255, 213, 227, 0.637);
   	width: 100%;
   	max-width: 900px;
   	padding: 50px;
 	margin: auto;
 	align-items: stretch;
-
 	}
