--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -6,8 +6,11 @@ html 	{
 	background-attachment:fixed;
 	}
 
+* {
+box-sizing: border-box;
+}
 p, ul	{
-	align-text:right;
+	
 	padding: 0px 20px;
 	font-size: 16pt;
 	letter-spacing: 3px;
@@ -49,32 +52,29 @@ span	{
 
 h1	{
 	text-align: center;
-	font-family: 'Cinzel Decorative', Times New Roman;
+	font-family: 'Cinzel Decorative', 'Times New Roman';
 	text-transform: uppercase;
 	}
 h2 	{
 	text-align: center;
-	font-family: 'Cinzel Decorative', Times New Roman;
+	font-family: 'Cinzel Decorative', 'Times New Roman';
 	letter-spacing: 3px;
 
 	}
 
 #selfie {
-  	border: 3px solid #ddd;
-  	border-radius: 8px;
+  	
   	margin-top: 10px;
 	margin-right: 20px;
 	float: left;
 	border: 10px solid transparent;
- 
-  border-image: url(border.png) 30 stretch;
+  	border-image: url(border.png) 30 stretch;
 	}
 
 .content {
 	min-height: 100vh;
   	background-color: rgba(255, 213, 227, 0.637);
-  	width: 100%;
-  	max-width: 900px;
+	width:1000px;
   	padding: 50px;
 	margin: auto;
 	align-items: stretch;
