--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -40,9 +40,7 @@ footer {
 }
 
 body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
+	margin:0px;
 }
 
 span {
@@ -73,21 +71,18 @@ h2 {
 	width: 1000px;
 	padding: 50px;
 	margin: auto;
-	align-items: stretch;
+	
 }
 
 .button {
 	display: block;
 	margin: 20px auto;
-	width:25%;
-	height: 40px;
 	border:none;
 	font:bold 14pt 'Cinzel Decorative';
 	color:rgb(255, 255, 255);
 	background-color:rgb(190, 97, 152);
-	cursor:pointer;
-	
+	line-height: 40px;
+	width:22%;
 	border-radius: 6px;
 	text-align: center;
-	
 }
