--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -37,9 +37,9 @@ footer {
 	background: #6e375e;
 	padding: 30px;
 	color: white;
-	font: 14px;
-	text-transform: uppercase;
+	font-size: 13px;
 	letter-spacing: 3px;
+	text-align: center;
 }
 
 body {
